docs(backlog): sweep every closed row off the board, homing 11 unhomed facts
`docs/BACKLOG.md` says it lists "every OPEN item" and its own rules say a
shipped row is deleted here once its source doc owns the as-built. Twenty
SHIPPED/CLOSED entries had accumulated anyway (~640 lines), and one of them
was still being counted as a live P1 because its closure note sat directly
above the original row it was "retained for provenance" beneath.

Each entry was verified against the doc that owns its as-built before being
deleted. Eleven carried text that existed nowhere else; that text moved
first:

- guard-coverage.md  the vocabulary guard's SOURCE_RULES scope gap, and
                     "a guard that passes proves nothing until proven red";
                     the cross-language-pin idiom and its mutation counts
- jobs.md            the shared-pipeline audit as-built, the
                     authoredPipelineKeyOf keying trap, and the operator's
                     "WARN ONLY - it must never refuse" decision
- editions.md        the release.yml reactor-install as-built + 3 refusals
- db-layer.md        why write-time hooks were deliberately NOT added
- plus integrations, data-plane, tooling, performance, pipeline-authoring,
  control-api, acquisition, pipeline-editor, catalog-vs-executors,
  GLOSSARY, PROJECT_NOTES, dev-infra/README

Three things the sweep found that a bulk delete would have destroyed:

1. editions.md still described SBOM-RESOLVE-1 as an open P1 four days after
   it shipped.
2. SchedulerAuditTask's javadoc still says an operator decision is owed that
   was answered 2026-09-12 - the deleted entry was the only record of the
   answer. (Javadoc left alone; flagged in jobs.md.)
3. COLLECTOR-SPACE-ROOT-1 hid live untracked work: nothing committed
   declares `collector.dataset`, so that connector has never been driven
   end to end. Filed as COLLECTOR-DATASET-UNPROVEN-1.

Two rows pointed at owning docs that never mentioned their subject
(MEASURE-SHORTHAN